# rust-windows-task-scheduler

./: Cargo.toml  aliases.js  build.rs  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
src/: api.rs  lib.rs  types.rs
src/widestring/: error.rs.html  iter.rs.html  lib.rs.html  ucstr.rs.html  ucstring.rs.html  ustr.rs.html  ustring.rs.html
src/winapi/: lib.rs.html  macros.rs.html
src/windows_task_scheduler/: api.rs.html  lib.rs.html  types.rs.html
src/xml/: attribute.rs.html  common.rs.html  escape.rs.html  lib.rs.html  macros.rs.html  name.rs.html  namespace.rs.html  util.rs.html
tests/: manually.rs  xml.rs
widestring/: fn.decode_utf16_lossy.html  fn.decode_utf32.html  fn.decode_utf32_lossy.html  index.html  trait.UChar.html  type.WideChar.html
widestring/error/: enum.NulError.html  index.html  struct.ContainsNul.html  struct.DecodeUtf32Error.html  struct.FromUtf32Error.html  struct.MissingNulTerminator.html
winapi/: all.html  macro.DEFINE_DEVPROPKEY.html  macro.DEFINE_GUID.html  macro.DEFINE_PROPERTYKEY.html  macro.ENUM.html  macro.RIDL.html  macro.STRUCT.html  trait.Class.html  trait.Interface.html
windows_task_scheduler/: all.html  enum.Action.html  enum.MultipleInstancesPolicy.html  enum.Trigger.html  enum.Version.html  fn.create_task.html  fn.delete_task.html  index.html  sidebar-items.js  struct.IdleSettings.html  struct.Settings.html  struct.Subscription.html  struct.Task.html  struct.Value.html  struct.WinError.html
xml/: index.html  struct.EmitterConfig.html  struct.ParserConfig.html
(+19881 files in other folders)
